<resources>
    <string name="app_name">GitPic</string>

    <string name="login_button"> Login </string>
    <string name="do_not_have_account"> Don\'t have an account? </string>
    <string name="sign_up"> Sign Up </string>
    <string name="username"> Username </string>
    <string name="password"> Password </string>
    <string name="reenter_password"> Re-Enter Password </string>
    <string name="email"> Email </string>
    <string name="forgot_password"> Forgot Password? </string>
    <string name="have_account"> Have an account already? </string>
</resources>
