<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_background"
    tools:context=".LoginActivity">

    <ImageButton
        android:id="@+id/BackButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:src="@drawable/arrow"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/UsernameEditLogin"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="175dp"
        android:layout_marginLeft="85dp"
        android:background="@drawable/text_field_corners"
        android:hint="@string/username"
        android:textColorHint="@color/colorBlue"
        android:textCursorDrawable="@color/colorBlue"
        android:gravity="center"
        android:textColor="@color/colorGray"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="175dp"
        android:layout_marginLeft="275dp"
        android:background="@drawable/image_corners"
        android:src="@drawable/username" />

    <EditText
        android:id="@+id/PasswordEditLogin"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="225dp"
        android:layout_marginLeft="85dp"
        android:background="@drawable/text_field_corners"
        android:hint="@string/password"
        android:textColorHint="@color/colorBlue"
        android:textCursorDrawable="@color/colorBlue"
        android:gravity="center"
        android:textColor="@color/colorGray"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="225dp"
        android:layout_marginLeft="275dp"
        android:background="@drawable/image_corners"
        android:src="@drawable/password" />

    <Button
        android:id="@+id/LoginButtonPage"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_gray"
        android:text="@string/login_button"
        android:textColor="@color/colorGray"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/ForgotPassword"
        android:layout_width="275dp"
        android:layout_height="20dp"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="@string/forgot_password"
        android:textColor="@color/colorGray" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="420dp"
        android:layout_marginLeft="75dp"
        android:gravity="center"
        android:text="@string/do_not_have_account"
        android:textColor="@color/colorGray"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/SignUp"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="420dp"
        android:layout_marginLeft="250dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="@string/sign_up"
        android:gravity="center"
        android:textColor="@color/colorGray"
        android:textStyle="bold"/>

</RelativeLayout>