<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_background"
    tools:context=".WelcomeActivity">

    <ImageView
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:src="@drawable/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"/>

    <ImageView
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:src="@drawable/logo"
        android:layout_marginTop="75dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="275dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:text="@string/login_button"
        android:textColor="@color/colorWhite" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="75dp"
        android:gravity="center"
        android:text="@string/do_not_have_account"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="250dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"/>

</RelativeLayout>